Fixed yard check card date title displaying 1 day behind. Updated date format in the yard check details modal.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,7 +357,8 @@ header .page-title {
   background-color: #fff;
   margin: 5% auto;
   padding: 20px;
-  width: 80%;
+  width: 50%;
+  height: 80%;
   position: relative;
   overflow-y: scroll;
 }
